# VC-AGY-Hearth

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  docker-compose.yml  pyproject.toml
docs/: Product Requirements Document.md  presentation_script.md  project_tracking.md  submission_proposal.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  AuthGateway.tsx  CalendarTracker.tsx  ChatInterface.tsx  EmotionWheel.tsx  index.css
src/agent/: GEMINI.md  workflows.py
src/database/: db.py
src/server/: main.py  mcp_server.py
src/utils/: encryption.py
tests/unit/: test_dummy.py
