[project]
name = "hearth"
version = "0.1.0"
description = "Hearth - Production Emotion Tracking Journal and ADK Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # API Server & Gateway
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    
    # Vertex AI ADK & GenAI
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-genai>=0.1.1",
    "google-cloud-aiplatform>=1.156.0",
    "google-auth>=2.30.0",
    "protobuf>=5.27.0,<7.0.0",
    
    # MCP & Support libraries
    "mcp>=1.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1b0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ty]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./frontend,uv.lock,.venv,**/package-lock.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src"]
